Fix alignment for recent merchants and recent users

--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -26,6 +26,7 @@
 }
 
 .recent-merchants, .recent-merchants-dashboard, .recent-users-dashboard {
+  margin-left: 0;
   img {
     height: 80px;
     width: 80px;
